--- a/features.html
+++ b/features.html
@@ -803,10 +803,8 @@
           >
             Get in Touch with Us!
           </h1>
-          <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular"
-          >
-          to discuss your interest in Wicked Wipes
+          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
+            to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
             <img src="/public/bxs_phone-call.svg" alt="" />
@@ -833,26 +831,98 @@
           </div>
         </div>
         <div class="flex flex-col w-full shadow-md rounded-md p-10">
-          <form action="" class="w-full flex flex-col gap-y-6" id="contactForm" action="./inc/mailer.php" method="post" novalidate>
+          <form
+            action=""
+            class="w-full flex flex-col gap-y-6"
+            id="contactForm"
+            action="./inc/mailer.php"
+            method="post"
+            novalidate
+          >
             <div class="flex justify-between w-full gap-x-6">
-              <input type="text" id="fname" placeholder="First Name" name="fname" class="form" required minlength="2" />
-              <input type="text" id="lname" placeholder="Last Name" name="lname" class="form" required minlength="2" />
+              <input
+                type="text"
+                id="fname"
+                placeholder="First Name"
+                name="fname"
+                class="form"
+                required
+                minlength="2"
+              />
+              <input
+                type="text"
+                id="lname"
+                placeholder="Last Name"
+                name="lname"
+                class="form"
+                required
+                minlength="2"
+              />
             </div>
             <div class="flex justify-between w-full gap-x-6">
-              <input type="email" id="bemail" placeholder="Business Email" name="bemail" class="form" required />
-              <input type="tel" id="pnum" placeholder="Phone Number" name="pnum" class="form" required pattern="^[0-9]{10}$" />
+              <input
+                type="email"
+                id="bemail"
+                placeholder="Business Email"
+                name="bemail"
+                class="form"
+                required
+              />
+              <input
+                type="tel"
+                id="pnum"
+                placeholder="Phone Number"
+                name="pnum"
+                class="form"
+                required
+                pattern="^[0-9]{10}$"
+              />
             </div>
-            <input type="text" id="company" placeholder="Company Name" name="cname" class="form" required minlength="2" />
-            <textarea id="message" placeholder="Message" name="msg" class="form" required minlength="10"></textarea>
+            <input
+              type="text"
+              id="company"
+              placeholder="Company Name"
+              name="cname"
+              class="form"
+              required
+              minlength="2"
+            />
+            <textarea
+              id="message"
+              placeholder="Message"
+              name="msg"
+              class="form"
+              required
+              minlength="10"
+            ></textarea>
           </form>
           <div class="w-full flex justify-end">
-            <button class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4" onclick="validateForm()">
+            <button
+              class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
+              onclick="validateForm()"
+            >
               Let's Connect
             </button>
           </div>
         </div>
       </div>
     </section>
+    <!-- Cookies Code -->
+    <div
+    id="cookie-banner"
+    class="flex fixed z-[300] bottom-0 left-0 right-0 bg-gray-800 text-white p-5 justify-between items-center flex-col md:flex-row md:space-x-4"
+  >
+    <p class="text-lg text-center md:text-left">
+      We use cookies to enhance your experience. By continuing to visit this
+      site, you agree to our use of cookies.
+    </p>
+    <button
+      id="accept-cookies"
+      class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full"
+    >
+      Accept Cookies
+    </button>
+  </div>
     <!-- Footer Section-->
     <section>
       <div
@@ -896,38 +966,66 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       function validateForm() {
-        const form = document.getElementById('contactForm');
+        const form = document.getElementById("contactForm");
         if (!form.checkValidity()) {
           form.reportValidity();
         } else {
-          alert('Form submitted successfully!');
+          alert("Form submitted successfully!");
         }
       }
+      // Cookies Logic
+      document
+        .getElementById("accept-cookies")
+        .addEventListener("click", function () {
+          // Set a cookie indicating that the user has accepted cookies
+          document.cookie =
+            "cookiesAccepted=true; path=/; max-age=" + 60 * 60 * 24 * 365; // Cookie valid for 1 year
+
+          // Hide the cookie banner
+          document.getElementById("cookie-banner").style.display = "none";
+
+          // Show a dialog box confirming the acceptance
+          alert("Thank you! You have accepted cookies.");
+        });
+      function checkCookiesAccepted() {
+        if (
+          document.cookie
+            .split("; ")
+            .find((row) => row.startsWith("cookiesAccepted"))
+        ) {
+          // Cookie is set, hide the banner
+          document.getElementById("cookie-banner").style.display = "none";
+        }
+      }
+
+      window.onload = checkCookiesAccepted;
     </script>
     <script>
       $(document).ready(function () {
-          $('#contactForm').on('submit', function (e) {
-              e.preventDefault(); //Prevents default submit
-              var form = $(this);
-              var post_url = form.attr('action');
-              var post_data = form.serialize(); //Serialized the form data
-              $.ajax({
-                  type: 'POST',
-                  url: './inc/mailer.php', // Your form script
-                  data: post_data,
-                  success: function (msg) {
-                      $('#contactForm')[0].reset(); // to reset form data
-                      //alert('Success');
-                  },
-                  error: function(){
-                      alert("Error sending e-mail");
-                  }
-              }).done(function (msg) {
-                  setTimeout(function () {
-                      alert("Form submitted successfully! We'll get back to you soon. Thank you.");
-                  }, 2000);
-              });
+        $("#contactForm").on("submit", function (e) {
+          e.preventDefault(); //Prevents default submit
+          var form = $(this);
+          var post_url = form.attr("action");
+          var post_data = form.serialize(); //Serialized the form data
+          $.ajax({
+            type: "POST",
+            url: "./inc/mailer.php", // Your form script
+            data: post_data,
+            success: function (msg) {
+              $("#contactForm")[0].reset(); // to reset form data
+              //alert('Success');
+            },
+            error: function () {
+              alert("Error sending e-mail");
+            },
+          }).done(function (msg) {
+            setTimeout(function () {
+              alert(
+                "Form submitted successfully! We'll get back to you soon. Thank you."
+              );
+            }, 2000);
           });
+        });
       });
     </script>
     <script>
