--- a/private-label.html
+++ b/private-label.html
@@ -350,10 +350,8 @@
           >
             Get in Touch with Us!
           </h1>
-          <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular"
-          >
-          to discuss your interest in Wicked Wipes
+          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
+            to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
             <img src="/public/bxs_phone-call.svg" alt="" />
@@ -456,6 +454,22 @@
         </div>
       </div>
     </section>
+    <!-- Cookies Code -->
+    <div
+      id="cookie-banner"
+      class="flex fixed z-[300] bottom-0 left-0 right-0 bg-gray-800 text-white p-5 justify-between items-center flex-col md:flex-row md:space-x-4"
+    >
+      <p class="text-lg text-center md:text-left">
+        We use cookies to enhance your experience. By continuing to visit this
+        site, you agree to our use of cookies.
+      </p>
+      <button
+        id="accept-cookies"
+        class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full"
+      >
+        Accept Cookies
+      </button>
+    </div>
     <!-- Footer Section-->
     <section>
       <div
@@ -601,6 +615,33 @@
 
         observer.observe(documentSection);
       });
+
+      // Cookies Logic
+      document
+        .getElementById("accept-cookies")
+        .addEventListener("click", function () {
+          // Set a cookie indicating that the user has accepted cookies
+          document.cookie =
+            "cookiesAccepted=true; path=/; max-age=" + 60 * 60 * 24 * 365; // Cookie valid for 1 year
+
+          // Hide the cookie banner
+          document.getElementById("cookie-banner").style.display = "none";
+
+          // Show a dialog box confirming the acceptance
+          alert("Thank you! You have accepted cookies.");
+        });
+      function checkCookiesAccepted() {
+        if (
+          document.cookie
+            .split("; ")
+            .find((row) => row.startsWith("cookiesAccepted"))
+        ) {
+          // Cookie is set, hide the banner
+          document.getElementById("cookie-banner").style.display = "none";
+        }
+      }
+
+      window.onload = checkCookiesAccepted;
     </script>
   </body>
 </html>
