--- a/index.html
+++ b/index.html
@@ -393,24 +393,24 @@
         </div>
       </div>
       <div class="flex flex-col w-full shadow-md rounded-md p-10">
-        <form action="" class="w-full flex flex-col gap-y-6" id="contactForm" action="./inc/mailer.php" method="post" novalidate>
-          <div class="flex justify-between w-full gap-x-6">
-            <input type="text" id="fname" placeholder="First Name" name="fname" class="form" required minlength="2" />
-            <input type="text" id="lname" placeholder="Last Name" name="lname" class="form" required minlength="2" />
-          </div>
-          <div class="flex justify-between w-full gap-x-6">
-            <input type="email" id="bemail" placeholder="Business Email" name="bemail" class="form" required />
-            <input type="tel" id="pnum" placeholder="Phone Number" name="pnum" class="form" required pattern="^[0-9]{10}$" maxlength="10"  />
-          </div>
-          <input type="text" id="company" placeholder="Company Name" name="cname" class="form" required minlength="2" />
-          <textarea id="message" placeholder="Message" name="msg" class="form" required minlength="10"></textarea>
+        <form class="w-full flex flex-col gap-y-6" id="contactForm" action="./inc/mailer.php" method="post">
+            <div class="flex justify-between w-full gap-x-6">
+                <input type="text" id="fname" placeholder="First Name" name="fname" class="form" required minlength="2" />
+                <input type="text" id="lname" placeholder="Last Name" name="lname" class="form" required minlength="2" />
+            </div>
+            <div class="flex justify-between w-full gap-x-6">
+                <input type="email" id="bemail" placeholder="Business Email" name="bemail" class="form" required />
+                <input type="tel" id="pnum" placeholder="Phone Number" name="pnum" class="form" required pattern="^[0-9]{10}$" maxlength="10"  />
+            </div>
+            <input type="text" id="company" placeholder="Company Name" name="cname" class="form" required minlength="2" />
+            <textarea id="message" placeholder="Message" name="msg" class="form" required minlength="10"></textarea>
         </form>
         <div class="w-full flex justify-end">
-          <button class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4" onclick="validateForm()">
-            Let's Connect
-          </button>
+            <button type="submit" form="contactForm" class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4">
+                Let's Connect
+            </button>
         </div>
-      </div>
+    </div>    
     </div>
   </section>
     <!-- Cookies Code -->
@@ -561,14 +561,6 @@
 });
   </script>
 <script>
-  function validateForm() {
-    const form = document.getElementById('contactForm');
-    if (!form.checkValidity()) {
-      form.reportValidity();
-    } else {
-      alert('Form submitted successfully!');
-    }
-  }
   // Cookies Logic 
   document.getElementById('accept-cookies').addEventListener('click', function() {
     // Set a cookie indicating that the user has accepted cookies
@@ -590,30 +582,7 @@ function checkCookiesAccepted() {
 window.onload = checkCookiesAccepted;
 </script>
 <script>
-  $(document).ready(function () {
-      $('#contactForm').on('submit', function (e) {
-          e.preventDefault(); //Prevents default submit
-          var form = $(this);
-          var post_url = form.attr('action');
-          var post_data = form.serialize(); //Serialized the form data
-          $.ajax({
-              type: 'POST',
-              url: './inc/mailer.php', // Your form script
-              data: post_data,
-              success: function (msg) {
-                  $('#contactForm')[0].reset(); // to reset form data
-                  //alert('Success');
-              },
-              error: function(){
-                  alert("Error sending e-mail");
-              }
-          }).done(function (msg) {
-              setTimeout(function () {
-                  alert("Form submitted successfully! We'll get back to you soon. Thank you.");
-              }, 2000);
-          });
-      });
-  });
+
 </script>
   <script>
     const documentSection = document.getElementById("document-section");
