--- a/testimonials.html
+++ b/testimonials.html
@@ -277,12 +277,10 @@
         </div>
         <div class="flex flex-col w-full shadow-md rounded-md p-10">
           <form
-            action=""
             class="w-full flex flex-col gap-y-6"
             id="contactForm"
             action="./inc/mailer.php"
             method="post"
-            novalidate
           >
             <div class="flex justify-between w-full gap-x-6">
               <input
@@ -321,6 +319,7 @@
                 class="form"
                 required
                 pattern="^[0-9]{10}$"
+                maxlength="10"
               />
             </div>
             <input
@@ -343,8 +342,9 @@
           </form>
           <div class="w-full flex justify-end">
             <button
+              type="submit"
+              form="contactForm"
               class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
-              onclick="validateForm()"
             >
               Let's Connect
             </button>
