--- a/testimonials.html
+++ b/testimonials.html
@@ -339,6 +339,7 @@
               class="form"
               required
               minlength="10"
+              oninput="removeLinks(this)"
             ></textarea>
             <div class="flex justify-end w-full mt-10">
               <div
@@ -416,6 +417,13 @@
       </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      // Remove Links Function
+      function removeLinks(textarea) {
+        // Remove any links by replacing them with an empty string
+        textarea.value = textarea.value.replace(/https?:\/\/[^\s]+/g, "");
+      }
+    </script>
     <script>
       const hamburger = document.getElementById("hamburger");
       const menuDrawer = document.getElementById("menu-drawer");
